# cv5551-s26-team-pazr

./: FP1.py  README.md  checkpoint1.py  checkpoint2.py  checkpoint3.py  checkpoint4.py  checkpoint5.py  config.py  gesture_input.py  gui.py  prepare_hagrid.py  primitives.py  task_planner.py  test_primitives.py
install/lite6_cube_stacker/lib/lite6_cube_stacker/: aruco_detector  aruco_detector.py  camera_robot_calibration  cube_stacker
install/lite6_cube_stacker/local/lib/python3.10/dist-packages/lite6_cube_stacker/: __init__.py  camera_robot_calibration.py  cube_stacker.py
install/lite6_cube_stacker/local/lib/python3.10/dist-packages/lite6_cube_stacker-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/lite6_cube_stacker/share/ament_index/resource_index/package_run_dependencies/: lite6_cube_stacker
install/lite6_cube_stacker/share/ament_index/resource_index/parent_prefix_path/: lite6_cube_stacker
install/lite6_cube_stacker/share/lite6_cube_stacker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lite6_cube_stacker/share/lite6_cube_stacker/cmake/: lite6_cube_stackerConfig-version.cmake  lite6_cube_stackerConfig.cmake
install/lite6_cube_stacker/share/lite6_cube_stacker/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/lite6_cube_stacker/share/lite6_cube_stacker/launch/: cube_stacker.launch.py
log/: latest_build
src/lite6_cube_stacker/: CMakeLists.txt  package.xml
src/lite6_cube_stacker/launch/: cube_stacker.launch.py
src/lite6_cube_stacker/lite6_cube_stacker/: aruco_detector.py  camera_robot_calibration.py  cube_stacker.py
