<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite6_cube_stacker</name>
  <version>1.0.0</version>
  <description>
    Cube stacking system for the UFACTORY Lite6 arm using ZED camera
    and ArUco markers, orchestrated with MoveIt2 and ROS2 Humble.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Vision -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- MoveIt2 -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_py</depend>

  <!-- xArm / Lite6 -->
  <depend>xarm_msgs</depend>
  <depend>xarm_api</depend>

  <!-- ZED -->
  <depend>zed_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>